--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MyAndroidStudy</string>
 
     <string name="circle_progress_view">Circle_Progress_View</string>
+    <string name="rxjava_demo">RxJava_Demo</string>
 </resources>
